Avoid stretching portrait aspect thumbnails vertically, preserve thumbnail's height and width

--- a/oldalbum.web.frontend/src/main/frontend/src/App.css
+++ b/oldalbum.web.frontend/src/main/frontend/src/App.css
@@ -34,13 +34,11 @@
 
 .keep-aspect-img-thumbnail {
     height: 100%;
-    width: 100%;
     object-fit: contain;
     padding: .25rem;
     background-color: #fff;
     border: 1px solid #dee2e6;
     border-radius: .25rem;
-    max-width: 100%;
     height: auto;
 }
 
